--- a/website/src/layouts/base/header/header.astro
+++ b/website/src/layouts/base/header/header.astro
@@ -82,7 +82,5 @@ const { routes, links } = Astro.props;
   };
 
   setUpNavigationToggle();
-  document.addEventListener("astro:after-swap", () =>
-    setUpNavigationToggle()
-  );
+  document.addEventListener("astro:after-swap", () => setUpNavigationToggle());
 </script>
