--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -34,12 +34,11 @@ import Layout from "@/layouts/base/layout.astro";
         <br />
         <br />
         For most of my career I've been working with JavaScript/TypeScript and Python,
-        but lately I've been mostly using Go, and I would love to work more with
-        Rust. I'm passionate about open source and have made many small contributions
-        to various projects and open sourced some of my own work. My OSS work is
-        available on my <a href={SOCIAL_MEDIA.github.link}>GitHub account</a>.
-        For more info about my career check out my hopefully only slightly
-        outdated
+        but lately I've been mostly using Go, and I would love to work more with Rust.
+        I'm passionate about open source and have made many small contributions to
+        various projects and open sourced some of my own work. My OSS work is available
+        on my <a href={SOCIAL_MEDIA.github.link}>GitHub account</a>. For more
+        info about my career check out my hopefully only slightly outdated
         <a href="resume.pdf" data-astro-prefetch="false">resume</a>.
       </p>
     </div>
