--- a/website/src/pages/til/index.astro
+++ b/website/src/pages/til/index.astro
@@ -12,7 +12,7 @@ const posts = await getSortedCollection("til");
   <br />
   <br />
   As with blog, majority of the posts here are related to software development and
-  tech in general. Unlike blog posts, many posts here present no new information
-  but rather highlight a piece of information that may be less prominent in other
-  sources (e.g. documentation of a project).
+  tech in general. Unlike blog posts, many posts here present no new information but
+  rather highlight a piece of information that may be less prominent in other sources
+  (e.g. documentation of a project).
 </Posts>
