--- a/website/src/pages/blog/index.astro
+++ b/website/src/pages/blog/index.astro
@@ -16,6 +16,6 @@ const posts = await getSortedCollection("blog");
   engineers.
   <br />
   <br />
-  When it comes to post titles and descriptions I try to word them in a way that
-  I think would maximize engagement while not meaningfully misrepresenting the content.
+  When it comes to post titles and descriptions I try to word them in a way that I
+  think would maximize engagement while not meaningfully misrepresenting the content.
 </Posts>
