--- a/website/src/pages/now.astro
+++ b/website/src/pages/now.astro
@@ -1,10 +1,13 @@
 ---
 import Layout from "@/layouts/base/layout.astro";
 
-import { format } from "date-fns";
-
 // NOTE: months start from 0
-const updatedAt = format(new Date(2025, 8, 7), "LLLL d, yyyy");
+const updatedAt = new Date(2025, 8, 7).toLocaleDateString("en-US", {
+  timeZone: "UTC",
+  year: "numeric",
+  month: "long",
+  day: "numeric",
+});
 ---
 
 <Layout title="Now">
